# Wirehead2

./: CMakeCache.txt  Makefile  Readme.md  cmake_install.cmake  openxr-example
src/: CMakeLists.txt  camera.c  camera.h  main.c
src/io/: stlloader.cpp  stlloader.hpp
src/res/: screen_holder.stl
src/shader/: NV12_RGB.glsl  NV12_vertex.glsl  fragment.glsl  vertex.glsl
src/util/: converter.cpp  converter.hpp  strings.c  strings.h  universal_structs.h
